[gd_scene load_steps=14 format=2]

[ext_resource path="res://menu/emmasophia.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://emmasophia.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 19
extra_spacing_top = 21
extra_spacing_bottom = -15
extra_spacing_char = 4
extra_spacing_space = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 17
extra_spacing_top = 7
extra_spacing_bottom = -10
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 17
extra_spacing_top = 16
extra_spacing_bottom = -13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -295.0
margin_right = 460.0
margin_bottom = 295.0
rect_min_size = Vector2( 920, 590 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.141176, 0.141176, 1 )

[node name="settings" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="video" type="Tabs" parent="settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="settings/video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="settings/video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 20
columns = 2

[node name="DisplayMode" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_right = 243.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 4 )
text = "Display mode
"

[node name="DM" type="OptionButton" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 825.0
margin_right = 862.0
margin_bottom = 61.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 5 )
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="vsync" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_top = 82.0
margin_right = 243.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 6 )
text = "Vsync
"

[node name="CheckButton" type="CheckButton" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 81.0
margin_right = 862.0
margin_bottom = 121.0
size_flags_horizontal = 10

[node name="displayfps" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_top = 142.0
margin_right = 243.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 6 )
text = "Display FPS
"

[node name="CheckButton2" type="CheckButton" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 141.0
margin_right = 862.0
margin_bottom = 181.0
size_flags_horizontal = 10

[node name="MaxFps" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_top = 201.0
margin_right = 243.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 7 )
text = "Max FPS
"

[node name="HBoxContainer" type="HBoxContainer" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 394.0
margin_top = 201.0
margin_right = 862.0
margin_bottom = 250.0
size_flags_horizontal = 10

[node name="Label" type="Label" parent="settings/video/MarginContainer/VideoSettings/HBoxContainer"]
margin_top = 15.0
margin_right = 64.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 8 )
text = "MAX"

[node name="HSlider" type="HSlider" parent="settings/video/MarginContainer/VideoSettings/HBoxContainer"]
margin_left = 68.0
margin_right = 468.0
margin_bottom = 49.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 60.0
value = 60.0

[node name="Bloom" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_top = 271.0
margin_right = 243.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 6 )
text = "Bloom
"

[node name="CheckButton3" type="CheckButton" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 786.0
margin_top = 270.0
margin_right = 862.0
margin_bottom = 310.0
size_flags_horizontal = 10

[node name="Label" type="Label" parent="settings/video/MarginContainer/VideoSettings"]
margin_top = 330.0
margin_right = 243.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 8 )
text = "Brightness"

[node name="HSlider" type="HSlider" parent="settings/video/MarginContainer/VideoSettings"]
margin_left = 462.0
margin_top = 330.0
margin_right = 862.0
margin_bottom = 348.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="Tabs" parent="settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="settings/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="settings/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 20
columns = 2

[node name="mastervol2" type="Label" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_right = 202.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "Master Volume "

[node name="mastervol" type="HSlider" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_left = 462.0
margin_right = 862.0
margin_bottom = 18.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="musicvol" type="Label" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_top = 38.0
margin_right = 202.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 8 )
text = "Music Volume "

[node name="musicvol2" type="HSlider" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_left = 462.0
margin_top = 38.0
margin_right = 862.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="sfx" type="Label" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_top = 76.0
margin_right = 202.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 8 )
text = "SFX Volume "

[node name="sfx2" type="HSlider" parent="settings/Audio/MarginContainer/AudioSettings"]
margin_left = 462.0
margin_top = 76.0
margin_right = 862.0
margin_bottom = 94.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Gameplay" type="Tabs" parent="settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="settings/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="GameSettings" type="GridContainer" parent="settings/Gameplay/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 887.0
margin_bottom = 529.0
custom_constants/vseparation = 20
columns = 2

[node name="fov" type="Label" parent="settings/Gameplay/MarginContainer/GameSettings"]
margin_right = 202.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 8 )
text = "FOV"

[node name="HBoxContainer" type="HBoxContainer" parent="settings/Gameplay/MarginContainer/GameSettings"]
margin_left = 429.0
margin_right = 862.0
margin_bottom = 18.0
size_flags_horizontal = 10

[node name="FovVal" type="Label" parent="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer"]
margin_right = 29.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 9 )
text = "70"

[node name="fov2" type="HSlider" parent="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer"]
margin_left = 33.0
margin_right = 433.0
margin_bottom = 18.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
value = 70.0

[node name="MouseSens" type="Label" parent="settings/Gameplay/MarginContainer/GameSettings"]
margin_top = 39.0
margin_right = 202.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 8 )
text = "Mouse sensibility"

[node name="HBoxContainer2" type="HBoxContainer" parent="settings/Gameplay/MarginContainer/GameSettings"]
margin_left = 447.0
margin_top = 38.0
margin_right = 862.0
margin_bottom = 59.0
size_flags_horizontal = 10

[node name="MouseSens" type="Label" parent="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer2"]
margin_right = 11.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 10 )
text = ".1"

[node name="MouseSens2" type="HSlider" parent="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer2"]
margin_left = 15.0
margin_right = 415.0
margin_bottom = 21.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 3.0
value = 0.05

[connection signal="item_selected" from="settings/video/MarginContainer/VideoSettings/DM" to="." method="_on_DM_item_selected"]
[connection signal="toggled" from="settings/video/MarginContainer/VideoSettings/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="settings/video/MarginContainer/VideoSettings/CheckButton2" to="." method="_on_CheckButton2_toggled"]
[connection signal="value_changed" from="settings/video/MarginContainer/VideoSettings/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="settings/video/MarginContainer/VideoSettings/CheckButton3" to="." method="_on_CheckButton3_toggled"]
[connection signal="value_changed" from="settings/video/MarginContainer/VideoSettings/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="settings/Audio/MarginContainer/AudioSettings/mastervol" to="." method="_on_mastervol_value_changed"]
[connection signal="value_changed" from="settings/Audio/MarginContainer/AudioSettings/musicvol2" to="." method="_on_musicvol2_value_changed"]
[connection signal="value_changed" from="settings/Audio/MarginContainer/AudioSettings/sfx2" to="." method="_on_sfx2_value_changed"]
[connection signal="value_changed" from="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer/fov2" to="." method="_on_fov2_value_changed"]
[connection signal="value_changed" from="settings/Gameplay/MarginContainer/GameSettings/HBoxContainer2/MouseSens2" to="." method="_on_MouseSens2_value_changed"]
